fix(response): Spacing
- Fixed bottom spacing

--- a/themes/hugo-docs/assets/elements/response.scss
+++ b/themes/hugo-docs/assets/elements/response.scss
@@ -1,7 +1,7 @@
 .response {
   display: inline-flex;
   align-items: center;
-  margin-bottom: 1.5 * $space-m;
+  margin-bottom: $space-m;
   border-radius: $rounded-corners;
   overflow: hidden;
 
